# pve-cloud-controller

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt  tddog.toml
src/pve_cloud_ctrl/: adm.py  cron.py  funcs.py  watcher.py
